test/error/name_only_3.htest
#!/usr/bin/env hashdot
#. name +
